tests/ShouldFail/intro_name.8pus
Theorem easyimpl : forall A : Type, A -> A -> A.
Proof.
    intro x.
    intro x.
Qed.
